--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  get_it: ^7.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
