--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: modlog
 description: "A new Flutter package project."
-version: 0.0.4
+version: 0.0.5
 homepage:
 
 environment:
@@ -10,10 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.7.0
-  equatable: ^2.0.5
-  get_it: ^7.7.0
-  intl: ^0.19.0
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
+  get_it: ^8.0.3
+  intl: ^0.20.2
   vector_math: ^2.1.4
 
 dev_dependencies:
